[gd_scene format=3 uid="uid://33j7643rf7da"]

[ext_resource type="Script" uid="uid://cmjc5qrht2dum" path="res://scenes/gameplay/disaster_phase.gd" id="1_6asu7"]

[node name="DisasterPhase" type="CanvasLayer" unique_id=1815869061]
script = ExtResource("1_6asu7")

[node name="Control" type="Control" parent="." unique_id=1446778240]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control" unique_id=1860406677]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 271.0
grow_vertical = 2

[node name="DisasterLabel" type="Label" parent="Control/VBoxContainer" unique_id=1177918943]
unique_name_in_owner = true
layout_mode = 2

[node name="SolutionsLabel" type="Label" parent="Control/VBoxContainer" unique_id=209149322]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer" unique_id=834835508]
layout_mode = 2
alignment = 1

[node name="Win" type="Button" parent="Control/VBoxContainer/HBoxContainer" unique_id=1910009234]
layout_mode = 2
text = "Win"

[node name="Lose" type="Button" parent="Control/VBoxContainer/HBoxContainer" unique_id=2041091009]
layout_mode = 2
text = "Lose"

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Win" to="." method="_on_win_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Lose" to="." method="_on_lose_pressed"]
